# orb

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
design/logo-explorations/: v1-orbs.html  v2-aurora-orb.html  v3-ORB-typo.html  v4-lowercase-word.html
docs/: VIBE_IDEAS.md
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: shell-integration.ps1
src-tauri/src/: blocks.rs  commands.rs  config.rs  error.rs  lib.rs  pty.rs  shell.rs  state.rs  status.rs  usage.rs
src/chrome/: BlockHistory.svelte  CommandPalette.svelte  Settings.svelte  Sidebar.svelte  Splash.svelte  TabBar.svelte  TitleBar.svelte
src/core/: blocks-log.test.ts  blocks-log.ts  config.ts  log.ts  pty.ts  status.ts  theme.ts  usage.ts
src/layout/: Launcher.svelte  PaneView.svelte  SplitPane.svelte  Workspace.svelte  launch.ts  presets.ts  tabs.ts  tree.test.ts  tree.ts
src/store/: appStore.ts
src/styles/: app.css
src/terminal/: Terminal.svelte
src/terminal/blocks/: clipboard.test.ts  clipboard.ts  notify.ts  osc.test.ts  osc.ts
