[package]
name = "orb"
version = "1.1.1"
description = "A Rust/Tauri vibe-coding terminal"
authors = ["MochiBullet"]
edition = "2021"
license = "MIT"
repository = "https://github.com/MochiBullet/orb"

# cargo-binstall: prebuilt のポータブル exe を Release から取得してインストールする。
# release ワークフローが orb-<target>.exe を各リリースに添付する前提。
[package.metadata.binstall]
pkg-url = "https://github.com/MochiBullet/orb/releases/download/v{ version }/orb-{ target }{ binary-ext }"
bin-dir = "orb{ binary-ext }"
pkg-fmt = "bin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
thiserror = "2.0.18"
toml = "1.1.2"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2.7.1"

# 16GB・4コアの非力ノートでもヌルヌル動く軽量バイナリを狙うリリース最適化。
# opt-level "s" = サイズ最適化＋実行速度のバランス（ターミナルは描画速度も要るので "z" より "s"）。
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

